[project]
name = "dpm"
version = "0.0.0-9016"
description = "A package for install, update and manage sources of sets of datapackages"
readme = "README.md"
dependencies = [
  'frictionless',
  'pandas',
  'requests',
  'typer >= 0.9',
  'unidecode',
  'python-dotenv',
  'tomli >= 1.1.0 ; python_version < "3.11"',
  'openpyxl'
]

[project.optional-dependencies]
sql = ["frictionless[sql]"]
postgresql = ["frictionless[postgresql]"]
duckdb = ["frictionless[duckdb]"]
dev = [
    "pytest",
    "coverage",
    "pytest-cov",
    "syrupy",
]

docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-macros-plugin",
    "toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dpm = "dpm.cli:app"
